# not-a-wm

./: main.c  meson.build
